[package]
name = "spongedown"
version = "0.4.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Converts markdown to html with svgbob support"
readme = "README.md"
repository = "https://github.com/ivanceras/spongedown"
documentation = "https://docs.rs/spongedown"
keywords = ["markdown", "svg", "bob", "spongedown"]
edition = "2018"

[dependencies]
svgbob = { path = "../svgbob/svgbob"}
csv = {version = "1", optional = true}
comrak = {version = "0.7", default-features = false}
typed-arena = "1.2"
url = "1.7.1"
url_path = { path = "../url_path"}
log = "0.4"
file = {version = "1.1.2", optional = true}
syntect = { version = "4.1.0", default-features = false, features = ["default-fancy"]}



[features]
default = ["with-csv", "with-embed"]
with-csv = ["csv"]
with-embed = ["file"]

[profile.release]
debug = false
lto = true
opt-level = 'z'
panic = "abort"
